@@ -1,3 +1,8 @@
+2003-11-19  TAMUKI Shoichi <tamuki@linet.gr.jp>
+
+	* interface/ncurs_c.c, timidity/playmidi.[ch], timidity/readmidi.c:
+	  Support for user-defined temperament enter
+
 2003-11-17  Takashi Iwai <tiwai@suse.de>
 	
 	* interface/alsaseq_c.c, timidity/alsa_a.c:  Fix the compilation
@@ -8,7 +13,7 @@
 	* interface/alsaseq_c.c, interface/rtsyn_common.c,
 	  interface/ncurs_c.c, interface/w32g_subwin3.c,
 	  timidity/playmidi.[ch], timidity/tables.[ch]:
-	  Support for temperament adjustment by syntonic comma
+	  Support for temperament with passing major/minor key
 
 2003-11-13  TAMUKI Shoichi <tamuki@linet.gr.jp>
 
